TEST_PROGRAMS/INVALID/brendan_gordon/statesNstates.min
var y: int;
var x: int;
var z: int;

x = y = z = 5;

